@@ -122,7 +122,13 @@ Client.prototype.availableVersions = function(callback) {
 	var that = this;
 
 	this.fetchDescription(function (status, extract) {
-		callback(that, status, extract.call());
+		var versions = null;
+
+		try {
+			versions = extract.call();
+		} catch (e) {}
+
+		callback(that, status && !(versions === null), versions);
 
 	}, '/?describe=versions');
 };
@@ -191,6 +197,9 @@ Client.prototype.fetchDescription = function(callback, path) {
 		queryParameters: this.authProvider.queryParameters(),
 		callback: function (status, response) {
 			callback(status == 200, function () {
+				if (!response)
+					throw new Client.Exceptions.ProtocolError('Failed to fetch the API description');
+
 				if (response.version === undefined) {
 					throw new Client.Exceptions.ProtocolError(
 						'Incompatible protocol version: the client uses v'+ Client.ProtocolVersion +
@@ -590,35 +599,48 @@ function Http (debug) {
 Http.prototype.request = function(opts) {
 	if (this.debug > 5)
 		console.log("Request to " + opts.method + " " + opts.url);
-	
+
 	var r = new XMLHttpRequest();
-	
+
 	if (opts.credentials === undefined)
 		r.open(opts.method, opts.url);
 	else
 		r.open(opts.method, opts.url, true, opts.credentials.username, opts.credentials.password);
-	
+
 	for (var h in opts.headers) {
 		r.setRequestHeader(h, opts.headers[h]);
 	}
-	
+
 	if (opts.params !== undefined)
 		r.setRequestHeader('Content-Type', 'application/json; charset=utf-8');
-	
+
 	r.onreadystatechange = function() {
 		var state = r.readyState;
-		
+
 		if (this.debug > 6)
 			console.log('Request state is ' + state);
-		
+
 		if (state == 4 && opts.callback !== undefined) {
-			opts.callback(r.status, JSON.parse(r.responseText));
+			var json = null;
+
+			try {
+				json = JSON.parse(r.responseText);
+
+			} catch (e) {
+				console.log('JSON.parse failed', e);
+			}
+
+			if (json)
+				opts.callback(r.status, json);
+
+			else
+				opts.callback(false, undefined);
 		}
 	};
-	
+
 	if (opts.params !== undefined) {
 		r.send(JSON.stringify( opts.params ));
-		
+
 	} else {
 		r.send();
 	}
