@@ -7,6 +7,7 @@
 - Resource.actions does not contain aliases
 - Authenticate when fetching description
 - Fix Client.destroyResources
+- Client.fetchDescription: Handle errors when fetching/parsing fails
 
 * Thu Mar 03 2016 - version 0.5.2
 - No changes
